[gd_scene load_steps=6 format=2]

[ext_resource path="res://environment/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/animated_door_big_2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 8, 0, -8, 0, -8, -28, 8, -28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Door" type="StaticBody2D"]
z_index = 5
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="CharacterDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterDetector"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="SpriteOpen" type="Sprite" parent="."]
position = Vector2( 0, -20.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 6, 16, 41 )

[node name="SpriteClosed" type="Sprite" parent="."]
position = Vector2( 0, -20.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 6, 16, 41 )
